--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,9 @@ jobs:
     - name: Jasmine
       run: npm test -- --watch false --browsers ChromeHeadless
     - name: Protractor
-      run: npm run e2e --protractor -config=e2e/protractor-ci.conf.js
+      run: |
+        npm uninstall protractor
+        npm install --save-dev protractor
+        npm run e2e --protractor -config=e2e/protractor-ci.conf.js
     - name: Build
       run: npm run build -- --prod
