--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,7 @@ jobs:
         npm uninstall protractor
         npm install --save-dev protractor
         ./node_modules/.bin/webdriver-manager update --versions.chrome=2.44
+        ./node_modules/.bin/webdriver-manager start --versions.chrome=2.44
         npm run e2e --protractor -config=e2e/protractor-ci.conf.js
     - name: Build
       run: npm run build -- --prod
