--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,6 @@ jobs:
       run: npm test -- --watch false --browsers ChromeHeadless
     - name: Protractor
       run: |
-        npm run e2e --protractor -config=e2e/protractor-ci.conf.js
+        npm run e2e
     - name: Build
       run: npm run build -- --prod
