--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "e2ef": "ng e2e -config=e2e/protractor-ci.conf.js"
   },
   "private": true,
   "dependencies": {
