--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,6 @@ jobs:
     - name: Protractor
       run: |
         ./node_modules/.bin/webdriver-manager update
-        npm run e2e -config=e2e/protractor-ci.conf.js
+        npm run e2ef
     - name: Build
       run: npm run build -- --prod
