--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,8 @@ jobs:
     - name: Jasmine
       run: npm test -- --watch false --browsers ChromeHeadless
     - name: Protractor
-      run: npm run e2e -config=protractor-ci.conf.js
+      run: | 
+        ./node_modules/.bin/webdriver-manager update
+        npm run e2e
     - name: Build
       run: npm run build -- --prod
